<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.duno.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/expandableButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@android:drawable/arrow_down_float"
            android:gravity="start|center_vertical"
            android:onClick="expandableButton1"
            android:text="@string/problem_label" />

        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/expandableButton1"
            app:ael_duration="400"
            app:ael_expanded="true"
            app:ael_interpolator="accelerate"
            app:ael_orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <CheckBox
                    android:id="@+id/wanna_talk_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/wanna_talk_checkbox" />

                <CheckBox
                    android:id="@+id/wanna_play_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/wanna_play_checkbox" />

                <CheckBox
                    android:id="@+id/wanna_go_crazy_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/wanna_go_crazy_checkbox" />

                <CheckBox
                    android:id="@+id/need_drink_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/need_drink_checkbox" />

                <CheckBox
                    android:id="@+id/need_food_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/need_food_checkbox" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorDivider" />
            </LinearLayout>

        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        <Button
            android:id="@+id/notified_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableRight="@android:drawable/arrow_down_float"
            android:gravity="start|center_vertical"
            android:onClick="notifiedButton"
            android:text="@string/notified_label" />

        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/notified_button"
            android:textColor="@color/colorPrimaryText"
            app:ael_duration="400"
            app:ael_expanded="true"
            app:ael_interpolator="accelerate"
            app:ael_orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/szapi_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="Szapi" />

                <CheckBox
                    android:id="@+id/cifka_nori_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="Cifka &amp; Nóri" />

                <CheckBox
                    android:id="@+id/führer_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="Führer" />

                <CheckBox
                    android:id="@+id/homoki_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="Homoki" />

                <CheckBox
                    android:id="@+id/gabi_bea_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="Gabi &amp; Bea" />

                <CheckBox
                    android:id="@+id/konyak_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="Konyak" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorDivider" />

            </LinearLayout>

        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="notifyDudes"
            android:text="@string/notify_button" />


    </LinearLayout>
</ScrollView>

